# ai-economist-1c

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai_economist_service/api/: app.py  schemas.py
scripts/: run_episode.py
service/: __init__.py  __main__.py  agents.py  budget.py  environment.py  planner.py  simulation.py
service/api/: __init__.py  app.py  schemas.py
tests/: test_api_llm.py  test_api_specification.py  test_simulation.py
